# TweenForge

./: .gitignore  DESIGN.md  README.md  pyproject.toml
csp_plugin/: panel.html  tweenforge.js
docker/: Dockerfile  docker-compose.yml
photoshop_plugin/: index.js  manifest.json  panel.html
src/tweenforge/: __init__.py  cli.py  config.py
src/tweenforge/client/: __init__.py  adapter.py  protocol.py  session.py
src/tweenforge/csp/: bridge.py
src/tweenforge/daemon/: app.py  capture.py  preview.py
src/tweenforge/engine/: __init__.py  base.py  postprocess.py  rife.py
src/tweenforge/server/: app.py  schemas.py
src/tweenforge/server/static/: index.html
tests/: conftest.py  test_engine.py  test_server.py
